# secretaria

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  secretaria_service.py
